<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#130d1e"
    tools:context=".LobbyActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/graphic_logo"
                android:maxWidth="60dp"
                android:maxHeight="60dp"
                android:scaleType="fitCenter"
                android:src="@drawable/lobbymain" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text="@string/lobby"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/codeText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/code"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/codeID"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/to_add"
                    android:textColor="#FFFFFF"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/player1Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@drawable/border"
                android:backgroundTint="#515571"
                android:padding="6dp"
                android:text="@string/placeholder_player_name"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                app:drawableTint="#FFFFFF" />

            <TextView
                android:id="@+id/player2Text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:background="@drawable/border"
                android:backgroundTint="#515571"
                android:padding="6dp"
                android:text="@string/placeholder_player_name"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                app:drawableTint="#FFFFFF" />

            <Button
                android:id="@+id/returnMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#254794"
                android:text="@string/return_to_menu" />

            <Button
                android:id="@+id/startGame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#254794"
                android:text="@string/start_game" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
